--- a/index.html
+++ b/index.html
@@ -19262,13 +19262,13 @@ __אופן ההכנה:__
 &lt;&lt;englink [[Grape leaves]]&gt;&gt;
 </pre>
 </div>
-<div created="20240103174956683" modified="20240302115151291" tags="מתכונים מטבחים [[חיות אוכל]] [[לא מסוימים]] [[אירי וגורה]] בתים [[טבחים הם רקדנים]] [[מתכונים טבעוניים]] [[כשמקשיבה לחדשות]]" title="עלי מנגולד ופלפל שושקה ממולאים">
+<div created="20240103174956683" modified="20240302115545671" tags="מתכונים מטבחים [[חיות אוכל]] [[לא מסוימים]] [[אירי וגורה]] בתים [[טבחים הם רקדנים]] [[מתכונים טבעוניים]] [[כשמקשיבה לחדשות]]" title="עלי מנגולד ופלפל שושקה ממולאים">
 <pre>[img[pictures/stuffedchard.jpg]]
 
 !!![[אירי וגורה]]:
 
-את האיור הזה גורה עשתה עכשיו, בימי המלחמה,
-זה התחיל [[כשאבא יואל|אבא יואל]] הציע לגורה הבוכיה לצייר משהו על קיר המטבח. גורה, לאחר חיטוט במרשתת נדלקה על [[הרוטב הנפלא|https://en.m.wikipedia.org/wiki/File:Jehan_Georges_Vibert_-_The_Marvelous_Sauce,_ca._1890,_Albright-Knox_Art_Gallery.jpg]], ציור שלא הכירה, וציירה אותו בדרכה. את האיור גורה עשתה מתמונה שיואל צילם. שתינו מכינות ממולאים ממש באותו המטבח.
+את האיור הזה גורה עשתה עכשיו, בימי המלחמה.
+זה התחיל [[כשאבא יואל|אבא יואל]] הציע לגורה הבוכיה לצייר משהו על קיר המטבח. גורה, לאחר חיטוט במרשתת נדלקה על [[הרוטב הנפלא|https://en.m.wikipedia.org/wiki/File:Jehan_Georges_Vibert_-_The_Marvelous_Sauce,_ca._1890,_Albright-Knox_Art_Gallery.jpg]], ציור שלא הכירה.  האיור הוא מתמונה שיואל צילם. שתינו מכינות ממולאים ממש באותו המטבח.
 
 
 ''
